--- a/services/user-management-service/.env
+++ b/services/user-management-service/.env
@@ -1,5 +1,5 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=4000
 DATABASE_USER=root
-DATABASE_PASS=
+DATABASE_PASS=root_password
 DATABASE_NAME=user_management
