--- a/services/user-management-service/docker-compose.yml
+++ b/services/user-management-service/docker-compose.yml
@@ -1,13 +1,23 @@
-version: '3.9'
+version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    ports:
-      - 5432:5432
-    volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+  mysql:
+    image: mysql:8.0
+    container_name: user_db
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=root
-      - POSTGRES_DB=bank
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: user_management
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: root
+    ports:
+      - "4000:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - mysql_network
+
+volumes:
+  mysql_data:
+
+networks:
+  mysql_network:
