--- a/services/transaction-service/docker-compose.yml
+++ b/services/transaction-service/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "4001:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    extra_hosts:
+        host.docker.internal: host-gateway
     networks:
       - mysql_network
 
