add mail service and revise locust

--- a/services/loadtest/docker-compose.yml
+++ b/services/loadtest/docker-compose.yml
@@ -7,7 +7,9 @@ services:
      - "8089:8089"
     volumes:
       - ./:/mnt/locust
-    command: -f /mnt/locust/locustfile.py --master -H http://master:8089
+    command: -f /mnt/locust/locustfile.py --master -H http://host.docker.internal:8000
+    extra_hosts:
+        host.docker.internal: host-gateway
   
   worker:
     image: locustio/locust
@@ -16,3 +18,5 @@ services:
     command: -f /mnt/locust/locustfile.py --worker --master-host master
     depends_on:
       - "master"
+    extra_hosts:
+        host.docker.internal: host-gateway
